fixed a number of warnings identified by findbugs eclipse plugin version 1.3.9
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/math/trunk@790243 13f79535-47bb-0310-9956-ffa450edef68